--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-vue": "^2.4.0",
+    "@snowpack/plugin-webpack": "^3.0.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
     "snowpack": "^3.3.7",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.2.4"
   }
 }
